syntax = "proto3";

package ${package}.domain;

import "akkaserverless/annotations.proto";

option java_outer_classname = "MyEntityDomain";

option (akkaserverless.file).event_sourced_entity = {
    name: "MyEntity"
    entity_type: "my-entity-data"
    state: "MyState"
    events: ["ValueSet"]
};

message MyState {
    int32 value = 1;
}

message ValueSet {
    string entity_id = 1 [(akkaserverless.field).entity_key = true];
    int32 value = 2;
}
